@@ -77,7 +77,7 @@ ixh, ixl, iyh and iyl can be used.
 .PP
 Assembler directives are:
 .TP
-.BR bininclude " 'filename'"
+.BR incbin " 'filename'"
 Include a binary file into the resulting assembled file.  This can be used to
 include text files, or images, sound files, etc.  The filename is searched for
 in the current directory, and then in the include path, just like for include.
