@@ -1,3 +1,8 @@
+2005-09-14  Bas Wijnen  <shevek@fmf.nl>
+
+	* z80asm.c (open_include_file, assemble): Open incbin'd files as
+	binary.
+
 2005-06-16  Bas Wijnen  <shevek@fmf.nl>
 
 	* Makefile: Fix incorrect version.
